Test services page

--- a/pages/about.html
+++ b/pages/about.html
@@ -162,7 +162,7 @@
             <!-- || Component - Banner infinite roll -->
             <div
               class="overflow-hidden banner-infinite-roll hero-tba-banner anim-slide-in-up anim-si-up-delay-responsive anim-gsap"
-              data-roll-speed="80" data-clone="true" data-scroll-trigger="true" data-animation="anim-si-up-animate">
+              data-roll-speed="80" data-scroll-trigger="true" data-animation="anim-si-up-animate">
               <div class="d-flex flex-nowrap banner-ir-roll-wr">
                 <div class="d-flex flex-nowrap flex-shrink-0 py-4 banner-ir-items-ctr">
                   <div class="flex-shrink-0"><span
@@ -281,7 +281,7 @@
                         src="../images/company/company-icon1.png" alt="Icon 1">
                     </div>
 
-                    <h4 class="h5 mb-3 lh-base">Brand Strategy & <br>Art Direction</h4>
+                    <h4 class="h5 cfs-xxl-24 mb-3 lh-base">Brand Strategy & <br>Art Direction</h4>
 
                     <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
@@ -298,7 +298,7 @@
                         src="../images/company/company-icon-2.png" alt="Icon 1">
                     </div>
 
-                    <h4 class="h5 mb-3 lh-base">UX/UI Design & <br>Website/App Design</h4>
+                    <h4 class="h5 cfs-xxl-24 mb-3 lh-base">UX/UI Design & <br>Website/App Design</h4>
 
                     <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
@@ -315,7 +315,7 @@
                         src="../images/company/company-icon3.png" alt="Icon 1">
                     </div>
 
-                    <h4 class="h5 mb-3 lh-base">Typography & <br>Video Production</h4>
+                    <h4 class="h5 cfs-xxl-24 mb-3 lh-base">Typography & <br>Video Production</h4>
 
                     <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
@@ -1060,7 +1060,8 @@
 
             <div class="position-relative z-1 container lead-pbg-sp-cnt-ctr">
               <div class="row gy-4 align-items-center">
-                <div class="col-lg-8">
+                <div class="col-lg-8 anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate"
+                  data-js-opacity-zero>
                   <h3 class="display-5 fw-semibold">Have a project in mind?</h3>
                   <p class="display-5"><span class="fw-semibold">Let’s</span> <span
                       class="fw-medium font-playfair-display">get to
