--- a/pages/services.html
+++ b/pages/services.html
@@ -162,7 +162,7 @@
             <!-- || Component - Banner infinite roll -->
             <div
               class="overflow-hidden banner-infinite-roll hero-tba-banner anim-slide-in-up anim-si-up-delay-responsive anim-gsap"
-              data-roll-speed="80" data-clone="true" data-scroll-trigger="true" data-animation="anim-si-up-animate">
+              data-roll-speed="80" data-scroll-trigger="true" data-animation="anim-si-up-animate">
               <div class="d-flex flex-nowrap banner-ir-roll-wr">
                 <div class="d-flex flex-nowrap flex-shrink-0 py-4 banner-ir-items-ctr">
                   <div class="flex-shrink-0"><span
@@ -204,7 +204,7 @@
           </div>
 
           <!-- || Block - Services card lead icon -->
-          <section class="services-cards-lead-icon services-cli-pt services-cli-mb">
+          <section class="bg-body services-cards-lead-icon services-cli-pt services-cli-mb">
             <div class="container">
               <div class="row mb-5 justify-content-between">
                 <div class="col-lg-7">
@@ -235,7 +235,7 @@
                         src="../images/company/company-icon1.png" alt="Icon 1">
                     </div>
 
-                    <h4 class="h5 mb-3 lh-base">Brand Strategy & <br>Art Direction</h4>
+                    <h4 class="h5 cfs-xxl-24 mb-3 lh-base">Brand Strategy & <br>Art Direction</h4>
 
                     <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
@@ -252,7 +252,7 @@
                         src="../images/company/company-icon-2.png" alt="Icon 1">
                     </div>
 
-                    <h4 class="h5 mb-3 lh-base">UX/UI Design & <br>Website/App Design</h4>
+                    <h4 class="h5 cfs-xxl-24 mb-3 lh-base">UX/UI Design & <br>Website/App Design</h4>
 
                     <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
@@ -269,7 +269,7 @@
                         src="../images/company/company-icon3.png" alt="Icon 1">
                     </div>
 
-                    <h4 class="h5 mb-3 lh-base">Typography & <br>Video Production</h4>
+                    <h4 class="h5 cfs-xxl-24 mb-3 lh-base">Typography & <br>Video Production</h4>
 
                     <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
@@ -290,7 +290,7 @@
                   <div class="h-100 sr-cip-img-wr">
                     <img class="w-100 h-100 object-fit-cover sr-cip-img-op-left"
                       src="../images/company/cover-design-1.jpg"
-                      alt="A cover design of spotlight pointing on floor with book cover details">
+                      alt="A Book holding to see the cover designed of spotlight pointing on floor and cover details">
                   </div>
                 </div>
 
@@ -303,17 +303,17 @@
                   <ul class="list-group mb-5">
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Make your business visible online.</span>
+                      <span class="lh-md">Make your business visible online.</span>
                     </li>
 
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Make your eCommerce business stand out.</span>
+                      <span class="lh-md">Make your eCommerce business stand out.</span>
                     </li>
 
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Grow with your audience.</span>
+                      <span class="lh-md">Grow with your audience.</span>
                     </li>
                   </ul>
 
@@ -327,9 +327,9 @@
               <div class="row gy-4 gx-lg-0 align-items-center sr-cip-service-ctr">
                 <div class="col-lg-6 sr-cip-pin-wr">
                   <div class="h-100 sr-cip-img-wr">
-                    <img class="w-100 h-100 object-fit-cover sr-cip-img-op-left"
+                    <img class="w-100 h-100 object-fit-cover sr-cip-img-op-center"
                       src="../images/company/pamphlet-design.jpg"
-                      alt="A cover design of spotlight pointing on floor with book cover details">
+                      alt="A pamphlet holding designed of large word as in multiple line">
                   </div>
                 </div>
 
@@ -342,17 +342,17 @@
                   <ul class="list-group mb-5">
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Make your business visible online.</span>
+                      <span class="lh-md">Make your business visible online.</span>
                     </li>
 
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Make your eCommerce business stand out.</span>
+                      <span class="lh-md">Make your eCommerce business stand out.</span>
                     </li>
 
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Grow with your audience.</span>
+                      <span class="lh-md">Grow with your audience.</span>
                     </li>
                   </ul>
 
@@ -368,7 +368,7 @@
                   <div class="position-relative h-100 sr-cip-img-wr">
                     <img class="w-100 h-100 object-fit-cover sr-cip-img-op-left"
                       src="../images/company/cover-design-2.jpg"
-                      alt="A cover design of spotlight pointing on floor with book cover details">
+                      alt="Two books on the table, its cover designed as image of hanging lamp and cover details">
                   </div>
                 </div>
 
@@ -381,17 +381,17 @@
                   <ul class="list-group mb-5">
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Make your business visible online.</span>
+                      <span class="lh-md">Make your business visible online.</span>
                     </li>
 
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Make your eCommerce business stand out.</span>
+                      <span class="lh-md">Make your eCommerce business stand out.</span>
                     </li>
 
                     <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
                       <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
-                      <span class="lh-base">Grow with your audience.</span>
+                      <span class="lh-md">Grow with your audience.</span>
                     </li>
                   </ul>
 
@@ -545,7 +545,8 @@
 
             <div class="position-relative z-1 container lead-pbg-sp-cnt-ctr">
               <div class="row gy-4 align-items-center justify-content-between">
-                <div class="col-lg-8">
+                <div class="col-lg-8 anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate"
+                  data-js-opacity-zero>
                   <h3 class="display-5 fw-semibold">Have a project in mind?</h3>
                   <p class="display-5"><span class="fw-semibold">Let’s</span> <span
                       class="fw-medium font-playfair-display">get to
