Fix search form bg based on each page hero section

--- a/pages/team.html
+++ b/pages/team.html
@@ -115,7 +115,7 @@
             </button>
 
             <form class="d-flex form-sa-form z-3 p-2" role="search">
-              <input class="form-control position-relative rounded-end-0 z-n1 border-0 bg-white cfs-14 form-sa-input"
+              <input class="form-control position-relative rounded-end-0 z-n1 border-0 bg-white cfs-14 shadow-none form-sa-input"
                 type="search" placeholder="Search" aria-label="Search">
               <button class="btn text-secondary bg-dark-subtle" type="submit">
                 <span class="material-icons d-block cfs-18">search</span>
@@ -139,7 +139,7 @@
         <article>
 
           <!-- || Block - Hero trans banner anim -->
-          <div class="bg-white pb-5 pb-md-4 pb-xl-0 hero-trans-banner-anim">
+          <div class="pb-5 pb-md-4 pb-xl-0 hero-trans-banner-anim">
             <div class="container hero-tba-content-ctr">
               <div class="row justify-content-center gy-4 gy-lg-5">
                 <div class="col-12">
