--- a/pages/services.html
+++ b/pages/services.html
@@ -115,7 +115,7 @@
             </button>
 
             <form class="d-flex form-sa-form z-3 p-2" role="search">
-              <input class="form-control position-relative rounded-end-0 z-n1 border-0 bg-white cfs-14 form-sa-input"
+              <input class="form-control position-relative rounded-end-0 z-n1 border-0 cfs-14 shadow-none form-sa-input"
                 type="search" placeholder="Search" aria-label="Search">
               <button class="btn text-secondary bg-dark-subtle" type="submit">
                 <span class="material-icons d-block cfs-18">search</span>
