Complete team page BS all views and test

--- a/pages/team.html
+++ b/pages/team.html
@@ -140,7 +140,7 @@
         <article>
 
           <!-- || Block - Hero trans banner anim -->
-          <div class="pb-5 pb-md-4 pb-xl-0 hero-trans-banner-anim">
+          <div class="pb-5 pb-md-4 pb-xl-0 hero-trans-banner-anim hero-tba-team">
             <div class="container hero-tba-content-ctr">
               <div class="row justify-content-center gy-4 gy-lg-5">
                 <div class="col-12">
@@ -214,7 +214,7 @@
           <!-- || Block - Team profiles card anim -->
           <section class="bg-white team-profiles-card-anim">
             <div class="container">
-              <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 gy-5">
+              <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 gy-5 gx-lg-5 gx-xl-4 gx-xxl-5">
                 <div class="col">
                   <div
                     class="overflow-hidden position-relative border border-2 border-bottom-0 border-tertiary rounded-top-3 image-foreground-rt image-fg-rt-hover-display banner-infinite-roll animate__animated anim-gsap team-pca-profile"
@@ -503,15 +503,15 @@
           <!-- || Block - tm-swiper-cards-resp-ct (Testimonials swiper cards responsive controls top) -->
           <section class="tm-swiper-cards-resp-ct">
             <div class="container">
-              <div class="row tm-scr-ct-gy-6">
-                <div class="col-lg-4">
+              <div class="row tm-scr-ct-gy-6 gx-xl-5 align-items-center justify-content-center">
+                <div class="col-xl-4 col-xxl-auto">
                   <div class="mb-3">
                     <span
                       class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal lh-base fw-medium animate__animated anim-gsap"
                       data-animation="animate__fadeIn" data-js-opacity-zero aria-hidden="true">WHAT CLIENTS SAYS?</span>
                   </div>
 
-                  <h2 class="display-4 fw-semibold lh-base mb-4 anim-forward-flip-in-x anim-gsap"
+                  <h2 class="display-4 cfs-xl-50 fw-semibold lh-base mb-4 anim-forward-flip-in-x anim-gsap"
                     data-animation="anim-ff-in-x-animate" data-js-opacity-zero>Testimonials</h2>
 
                   <div class="d-flex justify-content-start column-gap-4">
@@ -527,7 +527,7 @@
                   </div>
                 </div>
 
-                <div class="col-lg-8">
+                <div class="col-xl-8">
                   <div class="swiper tm-scr-ct-swiper">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
