--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,10 @@
 						</div>
 
 						<div class="col">
-							<p class="text-secondary cfs-14 mb-1 fw-light">© 2023 All Rights Reserved by Shameer Kamaludeen</p>
+							<p class="text-secondary cfs-14 mb-1 fw-light">© 2023 All Rights Reserved by <a
+									href="https://github.com/shameerkamaludeen" target="_blank"
+									class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover cursor-hs-scale">Shameer
+									Kamaludeen</a></p>
 							<p class="text-secondary cfs-13 m-0 fw-light">Design inspired by <a
 									href="https://themeforest.net/user/ui-themez" target="_blank"
 									class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover cursor-hs-scale">UI-ThemeZ</a>
