--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,12 +3,195 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - Kindled</title>
+  <title>Kindled - Contact Us</title>
+  <meta name="description"
+    content="This is a website developed with the help of a design inspired by one of the Geekfolio's Creative Agency & Portfolio theme template.">
+  <link rel="icon" type="image/png" sizes="128x128" href="../images/favicon-128x128.png">
+
+  <!-- Google fonts starts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800&family=Playfair+Display:ital,wght@1,500&family=Sora:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Google fonts ends -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- local style import -->
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 
-<body>
-  <h1>Contact Us</h1>
+<body class="font-sora">
+  <!-- || Component - Cursor hover scale -->
+  <aside>
+    <div class="cursor-hover-scale rounded-circle d-none d-lg-block"></div>
+  </aside>
+
+  <!-- || Component - Scroll to top btn anim -->
+  <aside class="position-fixed z-3 scroll-to-top-btn-anim cursor-hs-scale">
+    <button type="button"
+      class="w-100 h-100 d-flex justify-content-center align-items-center border border-2 border-secondary rounded-circle">
+      <span class="material-icons fw-semibold">
+        expand_less
+      </span>
+    </button>
+  </aside>
+
+  <!-- || Component - loader full wh anim -->
+  <aside
+    class="position-fixed vw-100 vh-100 d-flex justify-content-center align-items-center bg-white d-none loader-full-wh-anim">
+    <div class="cfs-15 cfs-md-20 fw-light text-uppercase opacity-0 loader-fw-ha-st">Loading</div>
+  </aside>
+
+  <!-- || Header -->
+  <header class="sticky-header-top-anim">
+    <!-- || Component - Navbar responsive manu center -->
+    <nav class="navbar navbar-expand-lg bg-body navbar-responsive-menu-center">
+      <div class="container-lg navbar-rmc-container">
+        <a href="../" class="navbar-brand cursor-hs-scale navbar-rmc-brand cursor-hs-scale">
+          <h1 class="visually-hidden">Kindled</h1>
+          <img src="../images/logo-dark.png" alt="Kindled" class="navbar-rmc-brand-img">
+        </a>
+
+        <button class="navbar-toggler border-0 navbar-rmc-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse navbar-rmc-collapse" id="navbarSupportedContent">
+          <!-- || Nav -->
+          <ul class="navbar-nav me-auto mx-xxl-auto navbar-rmc-navbar">
+            <li class="nav-item navbar-rmc-nav-item">
+              <a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
+                aria-current="page" href="../">
+                <div class="rolling-text">Home</div>
+              </a>
+            </li>
+            <li class="nav-item navbar-rmc-nav-item">
+              <a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
+                href="./about.html">
+                <div class="rolling-text">About</div>
+              </a>
+            </li>
+            <li class="nav-item navbar-rmc-nav-item">
+              <a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
+                href="./services.html">
+                <div class="rolling-text">Services</div>
+              </a>
+            </li>
+            <li class="nav-item navbar-rmc-nav-item">
+              <a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
+                href="./team.html">
+                <div class="rolling-text">Team</div>
+              </a>
+            </li>
+            <li class="nav-item navbar-rmc-nav-item">
+              <a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
+                href="./portfolio.html">
+                <div class="rolling-text">Portfolio</div>
+              </a>
+            </li>
+            <li class="nav-item navbar-rmc-nav-item">
+              <a class="nav-link active text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
+                href="./contact.html">
+                <div class="rolling-text">Contact</div>
+              </a>
+            </li>
+          </ul>
+          <!-- || Component - Form search anim -->
+          <div class="form-search-anim" role="search">
+            <button class="d-block h-100 bg-body p-0 cursor-hs-scale form-sa-control overflow-hidden" type="button">
+              <div class="d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-search">
+                <span class="material-icons d-block cfs-18 text-secondary active">search</span>
+              </div>
+              <div
+                class="bg-secondary-subtle d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-close">
+                <span class="material-icons d-block cfs-18 text-secondary">close</span>
+              </div>
+            </button>
+
+            <form class="d-flex form-sa-form z-3 p-2" role="search">
+              <input
+                class="form-control position-relative rounded-end-0 z-n1 border-0 cfs-14 shadow-none form-sa-input"
+                type="search" placeholder="Search" aria-label="Search">
+              <button class="btn text-secondary bg-dark-subtle" type="submit">
+                <span class="material-icons d-block cfs-18">search</span>
+              </button>
+            </form>
+
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- || Component - Scroll smoother -->
+  <div class="scroll-smoother-gsap">
+    <div class="ss-gsap-content">
+
+      <!-- || Main -->
+      <main>
+
+        <!-- || Article -->
+        <article>
+
+          <!-- || Block - Hero trans banner anim -->
+          <div class="bg-white pb-5 pb-md-4 pb-xl-0 hero-trans-banner-anim">
+            <div class="container hero-tba-content-ctr">
+              <div class="row justify-content-center gy-4 gy-lg-5">
+                <div class="col-12">
+                  <div class="mb-3"><span
+                      class="text-uppercase ls-wide fw-light font-sora cfs-14 text-lead-list-marker">CONTACT US</span>
+                  </div>
+                  <h2
+                    class="display-2 col-lg-10 col-xl-8 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
+                    data-animation="animate__fadeInUp">Let's make your brand brilliant!</h2>
+                </div>
+                <p class="col-12 col-lg-6 col-xl-5 lh-md fw-light text-secondary animate__animated animate__delay-2s anim-gsap"
+                  data-animation="animate__fadeInUp">We help our clients succeed by creating brand identities, digital
+                  experiences, and print materials that communicate clearly, achieve marketing goals, and look
+                  fantastic.</p>
+              </div>
+            </div>
+        </article>
+      </main>
+
+      <!-- || Block - Footer responsive cols lead -->
+      <footer class="position-relative z-n1 footer-basic-logo-copyright">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-auto justify-content-between align-items-center gy-3">
+            <div class="col">
+              <a class="d-inline-block cursor-hs-scale footer-blc-logo-link" href="../">
+                <img class="w-100" src="../images/logo-dark.png" alt="Kindled Logo">
+              </a>
+            </div>
+
+            <div class="col">
+              <p class="text-secondary cfs-13 m-0 fw-light">© 2023 Kindled is Proudly Powered by <a
+                  href="https://github.com/shameerkamaludeen" target="_blank"
+                  class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover cursor-hs-scale">Shameer
+                  Kamaludeen</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+    </div>
+  </div>
+
+  <!-- gsap scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="../scripts/scroll-smoother.min.js"></script>
+
+  <!-- Font awesome kit -->
+  <script src="https://kit.fontawesome.com/efb6dbae73.js" crossorigin="anonymous"></script>
+  <script type="module" src="../scripts/main.js"></script>
 </body>
 
 </html>
