Complete contact page BS all views and testing

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -148,7 +148,7 @@
                   </div>
                   <h2
                     class="display-4 col-lg-10 col-xl-8 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
-                    data-animation="animate__fadeInUp">Let's make <br class="hero-tba-contact-br">your brand brilliant!
+                    data-animation="animate__fadeInUp">Let's make <br>your brand brilliant!
                   </h2>
                 </div>
                 <p class="col-12 col-lg-6 col-xl-5 lh-md fw-light text-secondary animate__animated animate__delay-2s anim-gsap"
@@ -162,8 +162,8 @@
           <!-- || Block - contact-resp-form-dtls (Contact responsive form, details columns -->
           <section class="overflow-hidden contact-resp-form-dtls">
             <div class="container position-relative contact-rfd-container">
-              <div class="row justify-content-between contact-rfd-gy-6">
-                <div class="col-lg-5">
+              <div class="row justify-content-between gx-5 gx-xxl-0 contact-rfd-gy-6">
+                <div class="col-lg-6 col-xl-5">
                   <div class="mb-3">
                     <span
                       class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal lh-md fw-medium animate__animated anim-gsap"
@@ -179,11 +179,12 @@
                     to get in touch, we’d love to
                     hear from you!</p>
 
-                  <a href="tel:+1 840 841 25 69" class="d-block h2 fw-semibold cursor-hs-scale contact-rfd-mb-60">+1 840
+                  <a href="tel:+1 840 841 25 69"
+                    class="d-inline-block h2 fw-semibold cursor-hs-scale contact-rfd-mb-60">+1 840
                     841 25
                     69</a>
 
-                  <div class="d-flex contact-rfd-cg-normal">
+                  <div class="d-flex flex-wrap row-gap-3 contact-rfd-cg-normal">
                     <a href="#" class="cfs-14 text-decoration-none text-primary cursor-hs-scale">Facebook</a>
                     <a href="#" class="cfs-14 text-decoration-none text-primary cursor-hs-scale">Twitter</a>
                     <a href="#" class="cfs-14 text-decoration-none text-primary cursor-hs-scale">LinkedIn</a>
