--- a/pages/services.html
+++ b/pages/services.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kindled - Services</title>
+  <title>Services - Kindled</title>
   <meta name="description"
     content="This is a website developed with the help of a design inspired by one of the Geekfolio's Creative Agency & Portfolio theme template.">
   <link rel="icon" type="image/png" sizes="128x128" href="../images/favicon-128x128.png">
